--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width-device-width, initial-scale=1.9">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>MOVIES</title>
         <link rel="stylesheet" href="/css/main.css">
